{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 2633,
  "lineage": "7fa955ee-a396-6b3c-d4b3-c70164029704",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "pubroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:route-table/rtb-02ed1e63267e908f0",
            "default_route_table_id": "rtb-02ed1e63267e908f0",
            "id": "rtb-02ed1e63267e908f0",
            "owner_id": "988940651769",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-060fbe7077714cf06",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tfpubrt"
            },
            "tags_all": {
              "Name": "tfpubrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0661bfd78124fe2e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.intgw",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "awsec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08970fb2e5767e3b8",
            "arn": "arn:aws:ec2:us-west-2:988940651769:instance/i-074a8d11c386918ee",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074a8d11c386918ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tfAWS-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b9c5559292894ff6",
            "private_dns": "ip-11-0-0-71.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.0.71",
            "public_dns": "ec2-54-202-19-0.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.19.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ded6230acf10a09",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d0bc9f4d86e3f74",
            "tags": {
              "Name": "Web-0"
            },
            "tags_all": {
              "Name": "Web-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1dc70fab3c5dd8b",
              "sg-0b1dcfd2c623dacb9"
            ]
          },
          "dependencies": [
            "aws_key_pair.publickey",
            "aws_security_group.remotesg",
            "aws_security_group.web",
            "aws_subnet.pubsub",
            "aws_vpc.vpc1",
            "tls_private_key.keypair"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08970fb2e5767e3b8",
            "arn": "arn:aws:ec2:us-west-2:988940651769:instance/i-02d5962dab76ad0fc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d5962dab76ad0fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tfAWS-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06e53bd99106a80c2",
            "private_dns": "ip-11-0-1-197.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.197",
            "public_dns": "ec2-34-219-16-30.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.16.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b85ad473bc0f04d",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-037cfd2550760aed0",
            "tags": {
              "Name": "Web-1"
            },
            "tags_all": {
              "Name": "Web-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1dc70fab3c5dd8b",
              "sg-0b1dcfd2c623dacb9"
            ]
          },
          "dependencies": [
            "aws_key_pair.publickey",
            "aws_security_group.remotesg",
            "aws_security_group.web",
            "aws_subnet.pubsub",
            "aws_vpc.vpc1",
            "tls_private_key.keypair"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08970fb2e5767e3b8",
            "arn": "arn:aws:ec2:us-west-2:988940651769:instance/i-009e2af6168b2e9ec",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-009e2af6168b2e9ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tfAWS-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a818da797f11f6bc",
            "private_dns": "ip-11-0-2-47.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.2.47",
            "public_dns": "ec2-34-210-104-83.us-west-2.compute.amazonaws.com",
            "public_ip": "34.210.104.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-036b1f87f138fb822",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c38f497e767a22ad",
            "tags": {
              "Name": "Web-2"
            },
            "tags_all": {
              "Name": "Web-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1dc70fab3c5dd8b",
              "sg-0b1dcfd2c623dacb9"
            ]
          },
          "dependencies": [
            "aws_key_pair.publickey",
            "aws_security_group.remotesg",
            "aws_security_group.web",
            "aws_subnet.pubsub",
            "aws_vpc.vpc1",
            "tls_private_key.keypair"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08970fb2e5767e3b8",
            "arn": "arn:aws:ec2:us-west-2:988940651769:instance/i-0e5fb0e8e07d8fcc6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e5fb0e8e07d8fcc6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tfAWS-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02ad26f032e6497f3",
            "private_dns": "ip-11-0-3-139.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.3.139",
            "public_dns": "ec2-34-223-44-109.us-west-2.compute.amazonaws.com",
            "public_ip": "34.223.44.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01048a27a19942ba7",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016b3379002312091",
            "tags": {
              "Name": "Web-3"
            },
            "tags_all": {
              "Name": "Web-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1dc70fab3c5dd8b",
              "sg-0b1dcfd2c623dacb9"
            ]
          },
          "dependencies": [
            "aws_key_pair.publickey",
            "aws_security_group.remotesg",
            "aws_security_group.web",
            "aws_subnet.pubsub",
            "aws_vpc.vpc1",
            "tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "intgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:internet-gateway/igw-060fbe7077714cf06",
            "id": "igw-060fbe7077714cf06",
            "owner_id": "988940651769",
            "tags": {
              "Name": "tfintgw"
            },
            "tags_all": {
              "Name": "tfintgw"
            },
            "vpc_id": "vpc-0661bfd78124fe2e5"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccb91eb45267aed7",
            "route_table_id": "rtb-02ed1e63267e908f0",
            "subnet_id": "subnet-02d0bc9f4d86e3f74"
          },
          "dependencies": [
            "aws_default_route_table.pubroute",
            "aws_internet_gateway.intgw",
            "aws_subnet.pubsub",
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b621d7fa345b1c38",
            "route_table_id": "rtb-02ed1e63267e908f0",
            "subnet_id": "subnet-037cfd2550760aed0"
          },
          "dependencies": [
            "aws_default_route_table.pubroute",
            "aws_internet_gateway.intgw",
            "aws_subnet.pubsub",
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b69fc53866209d9f",
            "route_table_id": "rtb-02ed1e63267e908f0",
            "subnet_id": "subnet-0c38f497e767a22ad"
          },
          "dependencies": [
            "aws_default_route_table.pubroute",
            "aws_internet_gateway.intgw",
            "aws_subnet.pubsub",
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fd9711d242143ec",
            "route_table_id": "rtb-02ed1e63267e908f0",
            "subnet_id": "subnet-016b3379002312091"
          },
          "dependencies": [
            "aws_default_route_table.pubroute",
            "aws_internet_gateway.intgw",
            "aws_subnet.pubsub",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "remotesg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:security-group/sg-0a1dc70fab3c5dd8b",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1dc70fab3c5dd8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf_remotesg",
            "name_prefix": "",
            "owner_id": "988940651769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_remotesg"
            },
            "tags_all": {
              "Name": "tf_remotesg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0661bfd78124fe2e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:security-group/sg-0b1dcfd2c623dacb9",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1dcfd2c623dacb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_websg",
            "name_prefix": "",
            "owner_id": "988940651769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_websg"
            },
            "tags_all": {
              "Name": "tf_websg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0661bfd78124fe2e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:subnet/subnet-02d0bc9f4d86e3f74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "11.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d0bc9f4d86e3f74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988940651769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PubSubnet-0"
            },
            "tags_all": {
              "Name": "PubSubnet-0"
            },
            "vpc_id": "vpc-0661bfd78124fe2e5"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:subnet/subnet-037cfd2550760aed0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037cfd2550760aed0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988940651769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PubSubnet-1"
            },
            "tags_all": {
              "Name": "PubSubnet-1"
            },
            "vpc_id": "vpc-0661bfd78124fe2e5"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:subnet/subnet-0c38f497e767a22ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c38f497e767a22ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988940651769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PubSubnet-2"
            },
            "tags_all": {
              "Name": "PubSubnet-2"
            },
            "vpc_id": "vpc-0661bfd78124fe2e5"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:subnet/subnet-016b3379002312091",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016b3379002312091",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988940651769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PubSubnet-3"
            },
            "tags_all": {
              "Name": "PubSubnet-3"
            },
            "vpc_id": "vpc-0661bfd78124fe2e5"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:vpc/vpc-0661bfd78124fe2e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0cc800d28eed8026e",
            "default_route_table_id": "rtb-02ed1e63267e908f0",
            "default_security_group_id": "sg-0ffcf89e85e7138b3",
            "dhcp_options_id": "dopt-01ff4d1ca34167ea2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0661bfd78124fe2e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ed1e63267e908f0",
            "owner_id": "988940651769",
            "tags": {
              "Name": "tfvpc"
            },
            "tags_all": {
              "Name": "tfvpc"
            }
          }
        }
      ]
    }
  ]
}